# ner_visualizer_dash

./: README.md  pyproject.toml
ner_visualizer/: app.py  config.py
